Fix too big docs

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2085,7 +2085,7 @@ button:hover,
 #header-wrapper {
   position: relative;
   padding: 4em 0 2em 0;
-  background-image: linear-gradient(75deg, rgba(0,0,0,0.7) 15%, rgba(0,0,0,0.7) 55%), url("/images/header.jpg");
+  background-image: linear-gradient(75deg, rgba(0,0,0,0.7) 15%, rgba(0,0,0,0.7) 55%), url("/images/rsz_header.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
